--- a/Trivia.UI/GameStart.xaml
+++ b/Trivia.UI/GameStart.xaml
@@ -22,7 +22,7 @@
                     </TransformGroup>
                 </Label.RenderTransform>
             </Label>
-            <Button Content="START" HorizontalAlignment="Left" Height="62" VerticalAlignment="Top" Width="132" Click="Button_Click" FontSize="22" RenderTransformOrigin="0.496,0.47" Background="#FF7AB0A3" FontFamily="Broadway" Opacity="0.9" Canvas.Left="378" Canvas.Top="430"/>
+            <Button Content="START" HorizontalAlignment="Left" Height="62" VerticalAlignment="Top" Width="132" Click="Button_Click" FontSize="30" RenderTransformOrigin="0.496,0.47" Background="#FF7AB0A3" FontFamily="Consolas" Opacity="0.9" Canvas.Left="378" Canvas.Top="430" FontWeight="Bold"/>
             <Label Content="with Team 7" Height="42" Canvas.Left="367" Canvas.Top="340" Width="166" FontFamily="Showcard Gothic" FontSize="24"/>
 
         </Canvas>
