--- a/Trivia.UI/MainWindow.xaml
+++ b/Trivia.UI/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<NavigationWindow x:Class="LetsGetQuizzical.MainWindow"
+﻿<NavigationWindow x:Class="Trivia.UI.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Title="Let's Get Quizzical" Height="600" Width="900" Source="GameStart.xaml">
