--- a/Trivia.UI/RightAnswer.xaml
+++ b/Trivia.UI/RightAnswer.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="LetsGetQuizzical.RightAnswer"
+﻿<Page x:Class="Trivia.UI.RightAnswer"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
