--- a/Trivia.UI/PlayerFirstLevelPage.xaml
+++ b/Trivia.UI/PlayerFirstLevelPage.xaml
@@ -61,7 +61,7 @@
         </Label>
         <Button Content="Answer C..." HorizontalAlignment="Left" Height="68" Margin="74,425,0,0" VerticalAlignment="Top" Width="319" Click="AnswerCButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
         <Button Content="Answer D..." HorizontalAlignment="Left" Height="68" Margin="551,425,0,0" VerticalAlignment="Top" Width="319" Click="AnswerDButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
-        <TextBlock HorizontalAlignment="Left" Height="40" Margin="738,21,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="86" IsEnabled="False"/>
+        <TextBlock HorizontalAlignment="Left" Height="40" Margin="738,21,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="86" IsEnabled="False" Name="pNameTB"/>
 
 
     </Grid>
