--- a/Trivia.UI/PlayerThirdLevelPage.xaml
+++ b/Trivia.UI/PlayerThirdLevelPage.xaml
@@ -5,10 +5,64 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Trivia.UI"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="600" d:DesignWidth="900" Background="#edea49"
       Title="PlayerThirdLevelPage">
 
     <Grid>
-        
+        <Label Content="third Level&#xA;" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="175" Margin="54,21,0,0" FontFamily="Showcard Gothic" FontSize="24"/>
+        <Label Content="Difficulty :&#xA;" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="162" Margin="54,66,0,0" FontFamily="Showcard Gothic" FontSize="24"/>
+        <Label Content="hard&#xA;" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="111" Margin="221,66,0,0" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF084000"/>
+        <Label Content="score :&#xA;" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="99" Margin="639,63,0,0" FontFamily="Showcard Gothic" FontSize="24"/>
+        <Label Content="name :&#xA;" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="85" Margin="638,21,0,0" FontFamily="Showcard Gothic" FontSize="24"/>
+
+        <TextBlock x:Name="pNameTB" HorizontalAlignment="Left" Height="40" Margin="738,26,0,0" TextWrapping="Wrap" Text="Player" VerticalAlignment="Top" Width="132" IsEnabled="False" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF084000" RenderTransformOrigin="0.484,1.064"/>
+        <TextBlock x:Name="pPoints" HorizontalAlignment="Left" Height="40" Margin="738,67,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="96" IsEnabled="False" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FFA50000" RenderTransformOrigin="0.484,1.064"><Run Text="0"/><LineBreak/><Run/></TextBlock>
+        <TextBlock Name="displayQuestion" HorizontalAlignment="Center" Height="69" Margin="102,147,0,0" TextWrapping="Wrap" Text="Some question" VerticalAlignment="Top" Width="700" FontFamily="Showcard Gothic" FontSize="24"/>
+        <Label Content="A:" HorizontalAlignment="Left" Height="37" Margin="26,299,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="1.239"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="0.378"/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <Label Content="B:" HorizontalAlignment="Left" Height="37" Margin="503,296,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="1.239"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="0.378"/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <Label Content="C:" HorizontalAlignment="Left" Height="37" Margin="26,437,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="1.239"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="0.378"/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <Label Content="D:" HorizontalAlignment="Left" Height="37" Margin="503,434,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="1.239"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="0.378"/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <Button Name="displayAnswerA" HorizontalAlignment="Left" Height="68" Margin="74,287,0,0" VerticalAlignment="Top" Width="319" Click="AnswerAButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
+        <Button Name="displayAnswerB" HorizontalAlignment="Left" Height="68" Margin="551,287,0,0" VerticalAlignment="Top" Width="319" Click="AnswerBButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
+        <Button Name="displayAnswerC"  HorizontalAlignment="Left" Height="68" Margin="74,425,0,0" VerticalAlignment="Top" Width="319" Click="AnswerCButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
+        <Button Name="displayAnswerD" HorizontalAlignment="Left" Height="68" Margin="551,425,0,0" VerticalAlignment="Top" Width="319" Click="AnswerDButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
+        <TextBlock x:Name="wrongAnswer" Visibility="Collapsed" HorizontalAlignment="Center" Height="37" Margin="356,245,319,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="225" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF9C0000" RenderTransformOrigin="0.636,-0.086" Text="   Wrong answer"/>
+        <TextBlock x:Name="correctAnswer"  Visibility="Collapsed" HorizontalAlignment="Center" Height="42" TextWrapping="Wrap" Text="  correct answer" VerticalAlignment="Top" Width="224" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF084000" RenderTransformOrigin="0.501,2.04" Margin="357,245,319,0"/>
     </Grid>
 </Page>
