--- a/Trivia.UI/StartQuizzardTest.xaml
+++ b/Trivia.UI/StartQuizzardTest.xaml
@@ -9,8 +9,8 @@
       Title="StartQuizzardTest">
 
     <Grid>
-        <TextBlock Name="QuestionText" HorizontalAlignment="Left" Height="69" Margin="319,41,0,0" TextWrapping="Wrap" Text="Some question" VerticalAlignment="Top" Width="322" FontFamily="Showcard Gothic" FontSize="36"/>
-        <Label Content="B:" HorizontalAlignment="Left" Height="37" Margin="503,190,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
+        <TextBlock Name="QuestionText" HorizontalAlignment="Left" Height="89" Margin="74,41,0,0" TextWrapping="Wrap" Text="Some question" VerticalAlignment="Top" Width="761" FontFamily="Showcard Gothic" FontSize="24"/>
+        <Label Content="B:" HorizontalAlignment="Left" Height="37" Margin="503,211,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
             <Label.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -20,7 +20,7 @@
                 </TransformGroup>
             </Label.RenderTransform>
         </Label>
-        <Label Content="A:" HorizontalAlignment="Left" Height="37" Margin="26,193,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
+        <Label Content="A:" HorizontalAlignment="Left" Height="37" Margin="26,214,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
             <Label.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -30,9 +30,9 @@
                 </TransformGroup>
             </Label.RenderTransform>
         </Label>
-        <Button Name="AnswerA" Content="Answer A..." HorizontalAlignment="Left" Height="68" Margin="74,181,0,0" VerticalAlignment="Top" Width="319" Click="AnswerAButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
-        <Button Name="AnswerB" Content="Answer B..." HorizontalAlignment="Left" Height="68" Margin="551,181,0,0" VerticalAlignment="Top" Width="319" Click="AnswerBButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
-        <Label Content="D:" HorizontalAlignment="Left" Height="37" Margin="503,328,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
+        <Button Name="AnswerA" Content="Answer A..." HorizontalAlignment="Left" Height="68" Margin="74,202,0,0" VerticalAlignment="Top" Width="319" Click="AnswerAButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
+        <Button Name="AnswerB" Content="Answer B..." HorizontalAlignment="Left" Height="68" Margin="551,202,0,0" VerticalAlignment="Top" Width="319" Click="AnswerBButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
+        <Label Content="D:" HorizontalAlignment="Left" Height="37" Margin="503,349,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
             <Label.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -42,7 +42,7 @@
                 </TransformGroup>
             </Label.RenderTransform>
         </Label>
-        <Label Content="C:" HorizontalAlignment="Left" Height="37" Margin="26,331,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
+        <Label Content="C:" HorizontalAlignment="Left" Height="37" Margin="26,352,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
             <Label.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -52,33 +52,11 @@
                 </TransformGroup>
             </Label.RenderTransform>
         </Label>
-        <Button Name="AnswerC" Content="Answer C..." HorizontalAlignment="Left" Height="68" Margin="74,319,0,0" VerticalAlignment="Top" Width="319" Click="AnswerCButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
-        <Button Name="AnswerD" Content="Answer D..." HorizontalAlignment="Left" Height="68" Margin="551,319,0,0" VerticalAlignment="Top" Width="319" Click="AnswerDButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
-        <TextBlock HorizontalAlignment="Left" Height="34" Margin="651,113,0,0" TextWrapping="Wrap" Text="Score:" VerticalAlignment="Top" Width="82" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FFA60202"/>
-        <TextBlock HorizontalAlignment="Left" Height="34" Margin="738,113,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="26" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FFA60202"/>
-        <Popup Name="MyPopup"
-           PlacementTarget="{Binding ElementName=btnTest}"
-           Placement="Mouse"
-           StaysOpen="False">
-            <StackPanel Background="PaleGreen">
-                <Label HorizontalAlignment="Center">I am a popup</Label>
-                <Button  Content="Close">
-                    <Button.Triggers>
-                        <EventTrigger RoutedEvent="Button.Click">
-                            <BeginStoryboard>
-                                <Storyboard>
-                                    <BooleanAnimationUsingKeyFrames                 
-            Storyboard.TargetName="MyPopup" 
-            Storyboard.TargetProperty="IsOpen"
-            Duration="0:0:1" FillBehavior="HoldEnd">
-                                        <DiscreteBooleanKeyFrame Value="False" KeyTime="0:0:0" />
-                                    </BooleanAnimationUsingKeyFrames>
-                                </Storyboard>
-                            </BeginStoryboard>
-                        </EventTrigger>
-                    </Button.Triggers>
-                </Button>
-            </StackPanel>
-        </Popup>
+        <Button Name="AnswerC" Content="Answer C..." HorizontalAlignment="Left" Height="68" Margin="74,340,0,0" VerticalAlignment="Top" Width="319" Click="AnswerCButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
+        <Button Name="AnswerD" Content="Answer D..." HorizontalAlignment="Left" Height="68" Margin="551,340,0,0" VerticalAlignment="Top" Width="319" Click="AnswerDButton" Background="#FFE7D221" FontFamily="Consolas" FontSize="18" Foreground="Black" FontWeight="Bold"/>
+        <TextBlock HorizontalAlignment="Left" Height="34" Margin="660,135,0,0" TextWrapping="Wrap" Text="Score:" VerticalAlignment="Top" Width="82" FontFamily="Showcard Gothic" FontSize="24" Foreground="Black"/>
+        <TextBlock Name="pPoints" HorizontalAlignment="Left" Height="34" Margin="748,135,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="87" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FFA60202"/>
+        <TextBlock x:Name="wrongAnswer" Visibility="Collapsed" HorizontalAlignment="Center" Height="37" Margin="356,160,319,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="225" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF9C0000" RenderTransformOrigin="0.636,-0.086" Text="   Wrong answer"/>
+        <TextBlock x:Name="correctAnswer" Visibility="Collapsed" HorizontalAlignment="Center" Height="42" TextWrapping="Wrap" Text="  correct answer" VerticalAlignment="Top" Width="224" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF084000" RenderTransformOrigin="0.501,2.04" Margin="357,159,319,0"/>
     </Grid>
 </Page>
