Fixed Sci-Fi category bug when program was crashing. Text alignment improvements. Question changes.

--- a/Trivia.UI/EndOfSecondLevelPage.xaml
+++ b/Trivia.UI/EndOfSecondLevelPage.xaml
@@ -13,8 +13,8 @@
         <Button Content="Continue" HorizontalAlignment="Left" Height="40" VerticalAlignment="Top" Width="134" Click="ContinueButton" Background="#FF7AB0A3" FontFamily="Consolas" FontSize="18" Foreground="Black" Margin="657,362,0,0" FontWeight="Bold"/>
         <Label Content="Score:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="305,184,0,0" Height="71" Width="178" FontFamily="Showcard Gothic" FontSize="48" Foreground="Black"/>
         <TextBlock Text="0" Name="pPoints" HorizontalAlignment="Left" Height="62" Margin="488,188,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="210" FontFamily="Showcard Gothic" FontSize="48" Foreground="#FF43076B"/>
-        <Label Content="ready for the final round?" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="52,352,0,0" Height="71" Width="537" FontFamily="Showcard Gothic" FontSize="36" Foreground="Black"/>
-        <TextBlock x:Name="pNameTB" HorizontalAlignment="Right" Height="66" Margin="0,86,62,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="224" IsEnabled="False" FontFamily="Showcard Gothic" FontSize="48" Foreground="#FF43076B" RenderTransformOrigin="0.484,1.064" Text=" Player"/>
+        <Label Content="ready for the final round?" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="85,360,0,0" Height="71" Width="537" FontFamily="Showcard Gothic" FontSize="36" Foreground="Black"/>
+        <TextBlock x:Name="pNameTB" HorizontalAlignment="Right" TextAlignment="Left" Height="66" Margin="0,86,62,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="224" IsEnabled="False" FontFamily="Showcard Gothic" FontSize="48" Foreground="#FF43076B" RenderTransformOrigin="0.484,1.064" Text=" Player"/>
         <Label Content="Oh, wow! good job,  " HorizontalAlignment="Left" VerticalAlignment="Top" Margin="96,81,0,0" Height="71" Width="526" FontFamily="Showcard Gothic" FontSize="48" Foreground="Black"/>
     </Grid>
 </Page>
