--- a/Trivia.UI/EndOfThirdLevel.xaml
+++ b/Trivia.UI/EndOfThirdLevel.xaml
@@ -10,10 +10,9 @@
 
     <Grid>
         <Label Content="end of game!" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="282,81,0,0" Height="71" Width="330" FontFamily="Showcard Gothic" FontSize="48" Foreground="Black"/>
-        <Label Content="your total score is:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="284,184,0,0" Height="71" Width="532" FontFamily="Showcard Gothic" FontSize="48" Foreground="Black"/>
-        <TextBlock Text="0" Name="pPoints" HorizontalAlignment="Left" Height="62" Margin="379,260,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="152" FontFamily="Showcard Gothic" FontSize="48" Foreground="#FF43076B"/>
-        <Label Content="hope you had fun getting quizzical!" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="96,378,0,0" Height="71" Width="741" FontFamily="Showcard Gothic" FontSize="36" Foreground="Black"/>
-        <TextBlock x:Name="pNameTB" HorizontalAlignment="Right" Height="66" Margin="0,189,631,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="198" IsEnabled="False" FontFamily="Showcard Gothic" FontSize="48" Foreground="#FF43076B" RenderTransformOrigin="0.484,1.064" Text=" Player"/>
-        <Label Content=",  " HorizontalAlignment="Left" VerticalAlignment="Top" Margin="259,189,0,0" Height="71" Width="25" FontFamily="Showcard Gothic" FontSize="48" Foreground="Black"/>
+        <Label Content=", your total score is:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="293,180,0,0" Height="71" Width="572" FontFamily="Showcard Gothic" FontSize="48" Foreground="Black"/>
+        <TextBlock Text="0" Name="pPoints" HorizontalAlignment="Left" TextAlignment="Center" Height="62" Margin="378,291,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="152" FontFamily="Showcard Gothic" FontSize="48" Foreground="#FF43076B"/>
+        <Label Content="hope you had fun getting quizzical!" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="101,427,0,0" Height="71" Width="712" FontFamily="Showcard Gothic" FontSize="36" Foreground="Black"/>
+        <TextBlock x:Name="pNameTB" HorizontalAlignment="Right" TextAlignment="Right" Height="66" Margin="0,185,607,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="235" IsEnabled="False" FontFamily="Showcard Gothic" FontSize="48" Foreground="#FF43076B" RenderTransformOrigin="0.484,1.064" Text=" Player"/>
     </Grid>
 </Page>
