--- a/Trivia.UI/PlayerFirstLevelPage.xaml
+++ b/Trivia.UI/PlayerFirstLevelPage.xaml
@@ -15,7 +15,7 @@
         <Label Content="score :&#xA;" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="99" Margin="639,63,0,0" FontFamily="Showcard Gothic" FontSize="24"/>
         <Label Content="name :&#xA;" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="85" Margin="638,21,0,0" FontFamily="Showcard Gothic" FontSize="24"/>
 
-        <TextBlock Name="displayQuestion" HorizontalAlignment="Center" Height="69" Margin="102,147,0,0" TextWrapping="Wrap" Text="Some question" VerticalAlignment="Top" Width="700" FontFamily="Showcard Gothic" FontSize="24"/>
+        <TextBlock Name="displayQuestion" HorizontalAlignment="Center" TextAlignment="Center" Height="76" Padding="7" Margin="74,147,66,0" TextWrapping="Wrap" Text="Some question" VerticalAlignment="Top" Width="760" FontFamily="Showcard Gothic" FontSize="24"/>
         <TextBlock Name="pNameTB" HorizontalAlignment="Left" Height="40" Margin="738,26,0,0" TextWrapping="Wrap" Text="Player" VerticalAlignment="Top" Width="132" IsEnabled="False" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FF084000" RenderTransformOrigin="0.484,1.064"/>
         <TextBlock x:Name="pPoints" HorizontalAlignment="Left" Height="40" Margin="738,67,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="96" IsEnabled="False" FontFamily="Showcard Gothic" FontSize="24" Foreground="#FFA50000" RenderTransformOrigin="0.484,1.064"><Run Text="0"/><LineBreak/><Run/></TextBlock>
         <Label Content="B:" HorizontalAlignment="Left" Height="37" Margin="503,296,0,0" VerticalAlignment="Top" Width="35" FontFamily="Showcard Gothic" FontSize="24" RenderTransformOrigin="0.5,0.5">
